syntax = "proto3";

package safir.agent.v1alpha1;

service FilesService {
  rpc List(FilesServiceListRequest) returns (stream FilesServiceListResponse);
}

message FilesServiceListRequest {}

message FilesServiceListResponse {
  string path = 1;
}
